fix contact section mobile width

--- a/src/Sections/ContactSection.module.scss
+++ b/src/Sections/ContactSection.module.scss
@@ -1,8 +1,11 @@
 .container {
-    width: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 3rem;
+
+    @media (min-width: 968px) {
+        width: 80%;
+    }
 }
